--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,21 +58,21 @@
 
 .logo-box-bg-white-amber {
     min-height: 200px;
-    background-image: url(/images/amber.png);
+    background-image: url(/assets/img/amber.png);
     background-size: 136px 200px;
     min-height: 500px;
 }
 
 .logo-box-bg-white {
     min-height: 200px;
-    background-image: url(/images/amber-black.png);
+    background-image: url(/assets/img/amber-black.png);
     background-size: 136px 200px;
     height: 500px;
 }
 
 .logo-box-bg-black {
     min-height: 200px;
-    background-image: url(/images/amber-white.png);
+    background-image: url(/assets/img/amber-white.png);
     background-size: 136px 200px;
     background-color: #000000;
     height: 500px;
@@ -80,7 +80,7 @@
 
 .logo-box-bg-amber {
     min-height: 200px;
-    background-image: url(/images/amber-white.png);
+    background-image: url(/assets/img/amber-white.png);
     background-size: 136px 200px;
     background-color: #E67E25;
     height: 500px;
@@ -191,7 +191,7 @@ li>code {
 }
 
 .sidebar-toggler {
-    margin-left: 270px;
+    margin-left: 240px;
 }
 
 #sidebar-wrapper {
@@ -222,10 +222,6 @@ blockquote p {
     margin-left: 30px;
     font-weight: 300;
     font-size: 14px;
-}
-
-#sidebar i {
-    margin-right: 6px;
 }
 
 #sidebar .list-group-item {
