modify css so that bottom of sidebar doesn't overflow (#36)
Former-commit-id: 63dd30ffcbba9b4c6d53cfcdc1e269fd5af69a9e

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -153,6 +153,8 @@ li>code {
     z-index: 4;
     overflow: hidden;
     position: fixed;
+    top: 3.8rem;
+    bottom: 0;
 }
 
 .main-content-full {
@@ -196,7 +198,6 @@ li>code {
 
 #sidebar-wrapper {
     overflow-y: auto;
-    height: 98%;
 }
 
 blockquote {
