--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -1,3 +1,12 @@
+@import url('./core.min.css');
+@import url('./thesaas.css');
+@import url("./ocean.css");
+@import url("./style.css");
+@import url("./spinner.css");
+
+$dark-orange: #c76511;
+$main-orange: #e67e25;
+
 small {
     color: #535353 !important;
 }
@@ -12,6 +21,12 @@ small {
 
 .topbar-nav .nav-link {
     opacity: 0.9;
+}
+
+.topbar-nav .nav-link.active,
+.topbar-nav .nav-link:focus,
+.topbar-nav .nav-link:hover {
+    text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.30);
 }
 
 .amber-stats {
@@ -51,9 +66,7 @@ small {
 }
 
 .orange-header {
-    background-image: linear-gradient(#f4994b 100px, #E67E25);
-    padding-top: 80px;
-    padding-bottom: 80px;
+    background-image: linear-gradient($main-orange 200px, $dark-orange);
 }
 
 .backtrace {
@@ -62,11 +75,7 @@ small {
 }
 
 .amber-color {
-    background-color: #f4994b !important;
-}
-
-.landpage-header {
-    background-image: linear-gradient(#f4994b 100px, #E67E25 50%);
+    background-color: $main-orange !important;
 }
 
 .guides-spacing {
@@ -84,4 +93,22 @@ small {
 
 .post-list > li > h2 {
     padding-bottom: 20px;
+}
+
+.amber-yt-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.amber-yt-video iframe,
+.amber-yt-video object,
+.amber-yt-video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
