--- a/src/assets/stylesheets/thesaas.css
+++ b/src/assets/stylesheets/thesaas.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800|Dosis:300,600");
+
 html,
 body {
     height: 100%;
@@ -7015,12 +7016,14 @@ a.text-danger:focus {
     color: #f35626;
     background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-animation: hue-rotate 60s infinite linear;
+    animation: hue-rotate 60s infinite linear;
 }
 
 .bg-hue-rotate {
-    -webkit-animation: hue-rotate 30s linear infinite;
+    animation: hue-rotate 30s linear infinite;
 }
 
 @-webkit-keyframes hue {
@@ -7032,12 +7035,17 @@ a.text-danger:focus {
     }
 }
 
-.overflow-hidden {
-    overflow: hidden;
+@keyframes hue {
+    from {
+        -webkit-filter: hue-rotate(0deg);
+    }
+    to {
+        -webkit-filter: hue-rotate(-360deg);
+    }
 }
 
-.no-shadow {
-    shadow: none;
+.overflow-hidden {
+    overflow: hidden;
 }
 
 .no-text-shadow {
