--- a/src/assets/stylesheets/spinner.scss
+++ b/src/assets/stylesheets/spinner.scss
@@ -11,7 +11,7 @@ by http://tobiasahlin.com/spinkit/
 }
 
 .cube1, .cube2 {
-  background-color: #e67e25;
+  background-color: $main-orange;
   width: 15px;
   height: 15px;
   position: absolute;
