Add new enhancements for Amber guides (#51)
* Add new enhancements for Amber guides

- Fix history button
- Use paths instead of hash
- Move sidebar.js from main.bundle.js to sidebar.bundle.js
- Use sidebar.js only on guides page
- Fix  anchors accesibility color (a tag)
- Add GuideController
- Add a GuideHelper module to save links between paths and sources.
- Change helpers pattern from Helper::Foo to FooHelper

* Disable spec

* Fix anchor color

* Fix guide links.

* Remove debugging code

* Add container-fluid, remove dead code and adjust dont-weight.

* Uodate amber version on home page

* Remove debug line

* Some small changes and suggestions

* Remove unneeded file


Former-commit-id: d5568edb992fe2ea6a29080d4a5825a35ef29a2e

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -20,6 +20,10 @@ small {
     color: #6c7077 !important;
 }
 
+.topbar {
+    position: fixed;
+}
+
 .topbar-nav .nav-link {
     opacity: .9;
 }
@@ -35,7 +39,7 @@ small {
 }
 
 #sidebar {
-    padding-bottom: 50% !important;
+    padding-bottom: 70vh !important;
 }
 
 .img-amber-logo {
