--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -7,6 +7,7 @@ $main-orange: #e57310;
 
 @import "style";
 @import "spinner";
+@import "youtube";
 
 small {
     color: #535353 !important;
@@ -89,7 +90,7 @@ small {
 }
 
 .post-list {
-    padding: 0;
+    padding: 0 10%;
 }
 
 .post-list > li {
@@ -98,22 +99,4 @@ small {
 
 .post-list > li > h2 {
     padding-bottom: 20px;
-}
-
-.amber-yt-video {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-}
-
-.amber-yt-video iframe,
-.amber-yt-video object,
-.amber-yt-video embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
 }
