Refactoring Blog management and fixes Heroku deploy (#55)
* Fix Heroku deploy

Outdated shard.lock (redis requirements changed). Please run shards update instead.

* Update sentry

Outdated shard.lock (sentry requirements changed). Please run shards update instead.

* Update dependencies

* Fix version depedencies

* Add post padding

* Refactor & simplify blog management.

- Moves posts metadata to posts.yml
- Add date to post url
- Organize posts using subdirectories
- Small padding changes

* Enhancements on home page and footer padding


Former-commit-id: afa29608f729a9249b1f1f63f53a5923b703340f

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -89,14 +89,22 @@ small {
     padding-bottom: 0;
 }
 
-.post-list {
+.post-list, .post_content {
     padding: 0 10%;
 }
 
-.post-list > li {
+.post-list > ul {
+    padding: 0;
+}
+
+.post-list > ul > li {
     list-style: none;
 }
 
-.post-list > li > h2 {
-    padding-bottom: 20px;
+.post-list > ul > li > h2 {
+    margin-bottom: 2rem;
+}
+
+.post-list > ul > li > p {
+    margin: 0;
 }
