--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -108,3 +108,12 @@ small {
 .post-list > ul > li > p {
     margin: 0;
 }
+
+.author-link {
+    color: #f3d3b7
+}
+
+.author-link:hover {
+    color: #ffffff;
+    text-decoration: none;
+}
