New blog design based on TheSaaS theme
Former-commit-id: 9838a85274bcbc89dea23c7dfc78b05634245606

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -69,6 +69,9 @@ small {
     .img-amber-logo {
         display: none !important;
     }
+    .h-full > div > p {
+        display: none !important;
+    }
 }
 
 .orange-header {
@@ -80,8 +83,12 @@ small {
     padding: 5px
 }
 
-.amber-color {
-    background-color: $main-orange !important;
+.topbar {
+  background: transparent !important;
+}
+
+body.body-scrolled > .topbar {
+  background: $main-orange !important;
 }
 
 .guides-spacing {
@@ -89,7 +96,7 @@ small {
     padding-bottom: 0;
 }
 
-.post-list, .post_content {
+.post-list {
     padding: 0 10%;
 }
 
@@ -109,11 +116,9 @@ small {
     margin: 0;
 }
 
-.author-link {
-    color: #f3d3b7
-}
-
-.author-link:hover {
-    color: #ffffff;
-    text-decoration: none;
+.text-light-dark,
+.text-light-dark:hover,
+.text-light-dark:focus,
+.text-light-dark:active {
+    color: #535353
 }
