--- a/src/assets/stylesheets/thesaas.css
+++ b/src/assets/stylesheets/thesaas.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800|Dosis:300,600");
-
 html,
 body {
     height: 100%;
@@ -6049,6 +6048,9 @@ ul.flexbox {
     font-size: 0.75rem;
     border-top: 1px solid #f1f2f3;
     padding: 30px 0;
+    bottom: 0;
+    position: absolute;
+    width: 100vw;
 }
 
 .site-footer p {
