Break sidebar into sections (#85)
Former-commit-id: a93e1a2f21f85d9e2a84fefcf1b65cc85abde7f2

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -129,3 +129,14 @@ body.body-scrolled > .topbar {
 #digitalocean img {
   width: 100px;
 }
+
+#guide-content {
+ min-height: 80vh;
+}
+
+.sticky-footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+
+}
